--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,18 +5,18 @@
     <string name="action_settings">Settings</string>
     <string name="food_delivery_logo">Food Delivery logo</string>
     <string-array name="options">
-        <item>Pizza</item>
-        <item>Sushi</item>
-        <item>Barbecue</item>
-        <item>Kebabs and burgers</item>
-        <item>WOK</item>
-        <item>Pasta</item>
-        <item>Snacks</item>
-        <item>Soup</item>
-        <item>Salad</item>
-        <item>Main course</item>
-        <item>Desserts</item>
-        <item>Discounts</item>
+        <!--        <item>Nothing</item>
+                <item>Sushi</item>
+                <item>Barbecue</item>
+                <item>Kebabs and burgers</item>
+                <item>WOK</item>
+                <item>Pasta</item>
+                <item>Snacks</item>
+                <item>Soup</item>
+                <item>Salad</item>
+                <item>Main course</item>
+                <item>Desserts</item>
+                <item>Discounts</item>-->
     </string-array>
     <string name="title_activity_food_category">FoodCategoryActivity</string>
     <string name="title_activity_food">FoodActivity</string>
